se agrego una lista

--- a/index.html
+++ b/index.html
@@ -8,5 +8,12 @@
 <body>
     <h1>titulo</h1>
     <p>parrafo</p>
+    <br>
+    <h2>listas de granos basicos</h2>
+    <ul>
+        <li>frijoles</li>
+        <li>arroz</li>
+        <li>maiz</li>
+    </ul>
 </body>
 </html>
