se agrego una imagen

--- a/index.html
+++ b/index.html
@@ -15,5 +15,7 @@
         <li>arroz</li>
         <li>maiz</li>
     </ul>
+    <h2>imagen de un gatito</h2>
+    <img src="#" alt="gatito"/>
 </body>
 </html>
