se aplico una tabla

--- a/index.html
+++ b/index.html
@@ -17,5 +17,26 @@
     </ul>
     <h2>imagen de un gatito</h2>
     <img src="#" alt="gatito"/>
+    <h2>tablas de las edades y su clasificacion</h2>
+    <table>
+        <tr>
+            <th>niño</th>
+            <th>joven</th>
+            <th>adulto</th>
+            <th>viejo</th>
+        </tr>
+        <tr>
+            <td>empieza de 1 año </td>
+            <td>empieza de 10 años</td>
+            <td>empieza de 20 años</td>
+            <td>empieza de 50 años</td>
+        </tr>
+        <tr>
+            <td>termina a los 9</td>
+            <td>termina a los 19</td>
+            <td>termina a los 49</td>
+            <td>termina cuando se muere</td>
+        </tr>
+    </table>
 </body>
 </html>
