se agrego formulario

--- a/index.html
+++ b/index.html
@@ -38,5 +38,11 @@
             <td>termina cuando se muere</td>
         </tr>
     </table>
+    <h2>formulario</h2>
+    <form action="getform.php" method="get" >
+        <label>Nombre: <input type="text" placeholder="escribe tu nombre..."></label><br><br>
+        <label>apellidos: <input type="text" placeholder="escribe tu apellido..."> </label><br><br>
+        <input type="submit" value="INGRESAR">
+    </form>
 </body>
 </html>
