se agrego un enlaze

--- a/index.html
+++ b/index.html
@@ -44,5 +44,6 @@
         <label>apellidos: <input type="text" placeholder="escribe tu apellido..."> </label><br><br>
         <input type="submit" value="INGRESAR">
     </form>
+    <a href="https://www.google.com/">google</a>
 </body>
 </html>
