--- a/index.html
+++ b/index.html
@@ -45,5 +45,6 @@
         <input type="submit" value="INGRESAR">
     </form>
     <a href="https://www.google.com/">google</a>
+    <h1>es otro titulo</h1>
 </body>
 </html>
