se agrego parrafo adicional

--- a/index.html
+++ b/index.html
@@ -53,5 +53,6 @@
     <p>este es un parrafo de ejemplo</p>
     <h1>titulo  No. 2</h1>
     <h2>titulo mas pequeño</h2>
+    <p>cosas que a las personas les pasa</p>
 </body>
 </html>
