--- a/index.html
+++ b/index.html
@@ -54,5 +54,6 @@
     <h1>titulo  No. 2</h1>
     <h2>titulo mas pequeño</h2>
     <p>cosas que a las personas les pasa</p>
+    <img src="#" alt="foto de perrito">
 </body>
 </html>
