--- a/index.html
+++ b/index.html
@@ -55,5 +55,6 @@
     <h2>titulo mas pequeño</h2>
     <p>cosas que a las personas les pasa</p>
     <img src="#" alt="foto de perrito">
+    <video src="perrito.mp4"></video>
 </body>
 </html>
