Revert "coreccion de video"
This reverts commit e22166b97dc70c4c191cd3fe1a88d11af5b574cd.

--- a/index.html
+++ b/index.html
@@ -55,6 +55,6 @@
     <h2>titulo mas pequeño</h2>
     <p>cosas que a las personas les pasa</p>
     <img src="#" alt="foto de perrito">
-    <video src="video/perrito.mp4"></video>
+    <video src="perrito.mp4"></video>
 </body>
 </html>
