--- a/index.html
+++ b/index.html
@@ -56,5 +56,6 @@
     <p>cosas que a las personas les pasa</p>
     <img src="#" alt="foto de perrito">
     <video src="perrito.mp4"></video>
+    <h1>adios</h1>
 </body>
 </html>
